--- a/vanilla.html
+++ b/vanilla.html
@@ -44,7 +44,7 @@
             <div class="left">
                 <div class="server-name">
                     <p>Vanila Minecraft Server</p>
-                    <h1 class="minecraft-server-ip">play.createminecraft.dpdns.org</h1>
+                    <h1 class="minecraft-server-ip">smp.createminecraft.dpdns.org</h1>
                 </div>
                 <!-- Minecraft status block -->
                 <div class="server-description" id="mc-status">
@@ -102,7 +102,7 @@
 
 <!-- Minecraft server status script -->
 <script>
-    const serverIP = "play.createminecraft.dpdns.org"; // vanilla server IP
+    const serverIP = "smp.createminecraft.dpdns.org"; // vanilla server IP
     const statusDiv = document.getElementById('mc-status');
 
     async function checkServer() {
