--- a/psn.html
+++ b/psn.html
@@ -88,7 +88,7 @@
     <section id="discord">
         <div class="content">
             <h2 class="section-title">Join our <span>PVE Oficial ASA ARK Server</span> if you need some dinos! <br> Join our <span>Dummystore!</span></h2>
-            <a href="#" class="discord-link"><button class="join-discord">Join Discord</button></a>
+            <a href="https://discord.gg/KZeXa26EPX" class="discord-link"><button class="join-discord">Join Discord</button></a>
         </div>
     </section>
 
