--- a/vanilla.html
+++ b/vanilla.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="icon" href="images/logo.png">
-    <meta name="description" content="Free, modern and nice web template for Minecraft server.">
+    <meta name="description" content="Minecraft Server 4 Friends.">
     <meta name="author" content="Astronawta">
 
     <link rel="stylesheet" href="css/global.css">
@@ -33,7 +33,7 @@
         <div class="links">
             <a href="index.html" class="link">Create</a>
             <a href="#" class="link active">Vanilla</a>
-            <a href="psn.html" class="link">PSN</a>
+            <a href="modify.html" class="link">Modify</a>
         </div>
     </div>
 
