--- a/modify.html
+++ b/modify.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="icon" href="images/logo.png">
-    <meta name="description" content="Free, modern and nice web template for Minecraft server.">
+    <meta name="description" content="Minecraft Server 4 Friends.">
     <meta name="author" content="Astronawta">
 
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/pages/home.css">
 
-    <title>Createminecraft | PSN</title>
+    <title>Createminecraft | Modify</title>
 </head>
 <body>
     <!--Navbar-->
@@ -33,7 +33,7 @@
         <div class="links">
             <a href="index.html" class="link">Create</a>
             <a href="vanilla.html" class="link">Vanilla</a>
-            <a href="#" class="link active">PSN</a>
+            <a href="#" class="link active">Modify</a>
         </div>
     </div>
 
@@ -43,8 +43,8 @@
 
             <div class="left">
                 <div class="server-name">
-                    <p>PSN Minecraft Server</p>
-                    <h1 class="minecraft-server-ip">psn.createminecraft.dpdns.org</h1>
+                    <p>Modify Minecraft Server</p>
+                    <h1 class="minecraft-server-ip">play.createminecraft.dpdns.org</h1>
                 </div>
                 <!-- Minecraft status block -->
                 <div class="server-description" id="mc-status">
@@ -97,12 +97,12 @@
     <p class="copyright">&copy; 2025 <span class="server-name-footer">createminecraft</span>. All rights reserved.</p>
 </footer>
 </body>
-<script src="js/psn.js"></script>
+<script src="js/modify.js"></script>
 <script src="https://kit.fontawesome.com/cbf5ee59c8.js" crossorigin="anonymous"></script>
 
 <!-- Minecraft server status script -->
 <script>
-    const serverIP = "psn.createminecraft.dpdns.org"; // PSN server IP
+    const serverIP = "play.createminecraft.dpdns.org"; // PSN server IP
     const statusDiv = document.getElementById('mc-status');
 
     async function checkServer() {
