--- a/index.html
+++ b/index.html
@@ -150,6 +150,20 @@
             });
         });
     });
+    
+    // Discord member count fetch logic
+    // Replace YOUR_DISCORD_SERVER_ID with your actual Discord server ID
+    const discordServerId = "1294820990718705705";
+    async function fetchDiscordMembers() {
+        try {
+            const response = await fetch(`https://discord.com/api/guilds/${discordServerId}/widget.json`);
+            const data = await response.json();
+            document.querySelector('.discord-online-users').textContent = data.presence_count ?? "None";
+        } catch (error) {
+            document.querySelector('.discord-online-users').textContent = "None";
+        }
+    }
+    fetchDiscordMembers();
+    setInterval(fetchDiscordMembers, 30000);
 </script>
-</html>
 </html>
