--- a/modify.html
+++ b/modify.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href="https://www.curseforge.com/"><button class="how-to-join">Curse</button></a>
+                    <a href="https://mega.nz/folder/mcVGSIiD#JPipmbg5aqmAgFi96CsSsw"><button class="how-to-join">Curse</button></a>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
