--- a/modify.html
+++ b/modify.html
@@ -44,7 +44,7 @@
             <div class="left">
                 <div class="server-name">
                     <p>Modify Minecraft Server</p>
-                    <h1 class="minecraft-server-ip">play.createminecraft.dpdns.org</h1>
+                    <h1 class="minecraft-server-ip">smp.createminecraft.dpdns.org</h1>
                 </div>
                 <!-- Minecraft status block -->
                 <div class="server-description" id="mc-status">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href="https://mega.nz/folder/mcVGSIiD#JPipmbg5aqmAgFi96CsSsw"><button class="how-to-join">Curse</button></a>
+                    <a href="https://mega.nz/folder/mcVGSIiD#JPipmbg5aqmAgFi96CsSsw "><button class="how-to-join">Curse</button></a>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
@@ -102,7 +102,7 @@
 
 <!-- Minecraft server status script -->
 <script>
-    const serverIP = "play.createminecraft.dpdns.org"; // PSN server IP
+    const serverIP = "smp.createminecraft.dpdns.org"; // PSN server IP
     const statusDiv = document.getElementById('mc-status');
 
     async function checkServer() {
