--- a/modify.html
+++ b/modify.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/pages/home.css">
 
-    <title>Createminecraft | Modify</title>
+    <title>Createminecraft | Home</title>
 </head>
 <body>
     <!--Navbar-->
@@ -31,9 +31,9 @@
         </div>
 
         <div class="links">
-            <a href="index.html" class="link">Create</a>
+            <a href="#" class="link active">Create</a>
             <a href="vanilla.html" class="link">Vanilla</a>
-            <a href="#" class="link active">Modify</a>
+            <a href="modify.html" class="link">Modify</a>
         </div>
     </div>
 
@@ -43,7 +43,7 @@
 
             <div class="left">
                 <div class="server-name">
-                    <p>Modify Minecraft Server</p>
+                    <p>Create Minecraft Server</p>
                     <h1 class="minecraft-server-ip">smp.createminecraft.dpdns.org</h1>
                 </div>
                 <!-- Minecraft status block -->
@@ -52,7 +52,7 @@
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href="https://mega.nz/folder/mcVGSIiD#JPipmbg5aqmAgFi96CsSsw "><button class="how-to-join">Curse</button></a>
+                    <a href="#"><button class="how-to-join">Curse</button></a>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
@@ -93,31 +93,30 @@
     </section>
 
     <!--Footer-->
-<footer id="footer">
-    <p class="copyright">&copy; 2025 <span class="server-name-footer">createminecraft</span>. All rights reserved.</p>
-</footer>
+    <footer id="footer">
+        <p class="copyright">&copy; 2025 <span class="server-name-footer">createminecraft</span>. All rights reserved.</p>
 </body>
 <script src="js/modify.js"></script>
 <script src="https://kit.fontawesome.com/cbf5ee59c8.js" crossorigin="anonymous"></script>
 
 <!-- Minecraft server status script -->
 <script>
-    const serverIP = "smp.createminecraft.dpdns.org"; // PSN server IP
+    const serverIP = "smp.createminecraft.dpdns.org"; // your server IP
     const statusDiv = document.getElementById('mc-status');
 
     async function checkServer() {
         try {
-            // Use Bedrock API endpoint for PSN
-            const response = await fetch(`https://api.mcsrvstat.us/bedrock/3/${serverIP}`);
+            // Changed to use the latest API endpoint
+            const response = await fetch(`https://api.mcsrvstat.us/2/${serverIP}`);
             const data = await response.json();
 
             if (data.online) {
                 statusDiv.innerHTML = `
                     <strong style="color:#00ff00;">✅ Server is ONLINE</strong><br>
-                    Players: ${data.players?.online ?? "?"} / ${data.players?.max ?? "?"}<br>
-                    Version: ${data.version ?? "Unknown"}<br><br>
+                    Players: ${data.players.online} / ${data.players.max}<br>
+                    Version: ${data.version}<br><br>
                 `;
-                document.querySelector(".minecraft-online-players").textContent = data.players?.online ?? "None";
+                document.querySelector(".minecraft-online-players").textContent = data.players.online;
             } else {
                 statusDiv.innerHTML = `
                     <strong style="color:#ff0000;">❌ Server is OFFLINE</strong><br>
@@ -132,7 +131,7 @@
     }
 
     checkServer();
-    setInterval(checkServer, 30000);
+    setInterval(checkServer, 30000); // refresh every 30s
 
     // Copy IP button functionality
     document.addEventListener('DOMContentLoaded', function() {
@@ -151,7 +150,7 @@
             });
         });
     });
-
+    
     // Discord member count fetch logic
     // Replace YOUR_DISCORD_SERVER_ID with your actual Discord server ID
     const discordServerId = "1294820990718705705";
