--- a/modify.html
+++ b/modify.html
@@ -31,9 +31,9 @@
         </div>
 
         <div class="links">
-            <a href="#" class="link active">Create</a>
+            <a href="index.html" class="link">Create</a>
             <a href="vanilla.html" class="link">Vanilla</a>
-            <a href="modify.html" class="link">Modify</a>
+            <a href="#" class="link active">Modify</a>
         </div>
     </div>
 
@@ -43,7 +43,7 @@
 
             <div class="left">
                 <div class="server-name">
-                    <p>Create Minecraft Server</p>
+                    <p>Modify Minecraft Server</p>
                     <h1 class="minecraft-server-ip">smp.createminecraft.dpdns.org</h1>
                 </div>
                 <!-- Minecraft status block -->
@@ -52,7 +52,7 @@
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href="#"><button class="how-to-join">Curse</button></a>
+                    <a href="https://mega.nz/folder/3YFCkYZa#ZvYtY22pbjhkfgVL11lq_Q"><button class="how-to-join">Curse</button></a>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
