--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href="#"><button class="how-to-join">Curse</button></a>
+                    <a href="#"><button class="how-to-join">Instant</button></a>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
