--- a/modify.html
+++ b/modify.html
@@ -46,13 +46,14 @@
                     <p>Modify Minecraft Server</p>
                     <h1 class="minecraft-server-ip">smp.createminecraft.dpdns.org</h1>
                 </div>
-                <!-- Minecraft status block -->
+
+<!-- Minecraft status block -->
                 <div class="server-description" id="mc-status">
                     Checking Minecraft server status...
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href="https://mega.nz/folder/mcVGSIiD#JPipmbg5aqmAgFi96CsSsw"><button class="how-to-join">Instant</button></a>
+                    <a href="https://mega.nz/folder/SIUlAQJJ#pidO57b2Hp1t7ZXH8iQATw"><button class="how-to-join">Instant</button></a>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
@@ -62,18 +63,18 @@
 
                 <div class="stats">
                     <div class="stat">
-                        <div class="icon">
-                            <i class="fa-brands fa-discord"></i>
-                        </div>
+                        <a href="https://your-minecraft-site-or-ip-here" class="icon" target="_blank">
+                         <i class="fa-brands fa-discord"></i>
+                        </a>
                         <div class="texts">
                             <h5 class="stat-title">ARK Discord Server</h5>
                             <p><span class="stat-number discord-online-users">None</span> users online</p>
                         </div>
                     </div>
                     <div class="stat">
-                        <div class="icon">
-                            <i class="fa-solid fa-server"></i>
-                        </div>
+                        <a href="https://your-minecraft-site-or-ip-here" class="icon" target="_blank">
+                         <i class="fa-solid fa-server"></i>
+                        </a>
                         <div class="texts">
                             <h5 class="stat-title">Minecraft server</h5>
                             <p><span class="stat-number minecraft-online-players">None</span> players online</p>
