--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                     <p>Create Minecraft Server</p>
                     <h1 class="minecraft-server-ip">mc.createminecraft.dpdns.org</h1>
                 </div>
+
+                
                 <!-- Minecraft status block -->
                 <div class="server-description" id="mc-status">
                     Checking Minecraft server status...
@@ -62,18 +64,18 @@
 
                 <div class="stats">
                     <div class="stat">
-                        <div class="icon">
-                            <i class="fa-brands fa-discord"></i>
-                        </div>
+                        <a href="https://your-minecraft-site-or-ip-here" class="icon" target="_blank">
+                         <i class="fa-brands fa-discord"></i>
+                        </a>
                         <div class="texts">
                             <h5 class="stat-title">ARK Discord Server</h5>
                             <p><span class="stat-number discord-online-users">None</span> users online</p>
                         </div>
                     </div>
                     <div class="stat">
-                        <div class="icon">
-                            <i class="fa-solid fa-server"></i>
-                        </div>
+                        <a href="https://your-minecraft-site-or-ip-here" class="icon" target="_blank">
+                         <i class="fa-solid fa-server"></i>
+                        </a>
                         <div class="texts">
                             <h5 class="stat-title">Minecraft server</h5>
                             <p><span class="stat-number minecraft-online-players">None</span> players online</p>
