--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <div class="stats">
                     <div class="stat">
-                        <a href="https://your-minecraft-site-or-ip-here" class="icon" target="_blank">
+                        <a href="https://discord.com/invite/KZeXa26EPX" class="icon" target="_blank">
                          <i class="fa-brands fa-discord"></i>
                         </a>
                         <div class="texts">
