--- a/modify.html
+++ b/modify.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href="https://mega.nz/folder/mcVGSIiD#JPipmbg5aqmAgFi96CsSsw"><button class="how-to-join">Instant</button></a>
+                    <a href=""><button class="how-to-join">Instant</button></a>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
