--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href=""><button class="how-to-join">Instant</button></a>
+                    <a href="https://mega.nz/folder/TMVQXKwZ#-KLbE6V4kwrtALnGzeoGgA"><button class="how-to-join">Instant</button></a>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
