--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="links">
             <a href="#" class="link active">Create</a>
-            <a href="vanilla.html" class="link">Vanilla</a>
+            <a href="vanilla.html" class="link">Bedrock</a>
             <a href="modify.html" class="link">Modify</a>
         </div>
     </div>
