--- a/vanilla.html
+++ b/vanilla.html
@@ -32,7 +32,7 @@
 
         <div class="links">
             <a href="index.html" class="link">Create</a>
-            <a href="#" class="link active">Vanilla</a>
+            <a href="#" class="link active">Bedrock</a>
             <a href="modify.html" class="link">Modify</a>
         </div>
     </div>
@@ -43,7 +43,7 @@
 
             <div class="left">
                 <div class="server-name">
-                    <p>Vanila Minecraft Server</p>
+                    <p>Bedrcok Minecraft Server</p>
                     <h1 class="minecraft-server-ip">play.createminecraft.dpdns.org</h1>
                 </div>
 
