--- a/modify.html
+++ b/modify.html
@@ -32,7 +32,7 @@
 
         <div class="links">
             <a href="index.html" class="link">Create</a>
-            <a href="vanilla.html" class="link">Vanilla</a>
+            <a href="vanilla.html" class="link">Bedrock</a>
             <a href="#" class="link active">Modify</a>
         </div>
     </div>
