--- a/modify.html
+++ b/modify.html
@@ -53,7 +53,8 @@
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href="https://mega.nz/folder/acFEnZbJ#JPipmbg5aqmAgFi96CsSsw"><button class="how-to-join">Instant</button></a>
+                    <a href="##" target="_blank" rel="noopener noreferrer">
+                    <button class="how-to-join">Instant</button>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
@@ -89,7 +90,12 @@
     <section id="discord">
         <div class="content">
             <h2 class="section-title">Join our <span>PVE Oficial ASA ARK Server</span> if you need some dinos! <br> Join our <span>Dummystore!</span></h2>
-            <a href="https://discord.gg/KZeXa26EPX" class="discord-link"><button class="join-discord">Join Discord</button></a>
+                <a href="https://discord.gg/KZeXa26EPX" 
+                class="discord-link" 
+                target="_blank" 
+                rel="noopener noreferrer">
+                <button class="join-discord">Join Discord</button>
+            </a>
         </div>
     </section>
 
