--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 </div>
                 <div class="buttons">
                     <button class="copy-ip">Copy IP</button>
-                    <a href="https://www.curseforge.com/minecraft/modpacks/createminecraft"><button class="how-to-join">Instant</button></a>
+                    <a href="https://www.curseforge.com/minecraft/modpacks/createminecraft" target="_blank" rel="noopener noreferrer">
+                    <button class="how-to-join">Instant</button>
+                </a>
                 </div>
                 <p class="ip-copied">IP was successfully copied!</p>
             </div>
@@ -90,7 +92,13 @@
     <section id="discord">
         <div class="content">
             <h2 class="section-title">Join our <span>PVE Oficial ASA ARK Server</span> if you need some dinos! <br> Join our <span>Dummystore!</span></h2>
-            <a href="https://discord.gg/KZeXa26EPX" class="discord-link"><button class="join-discord">Join Discord</button></a>
+            <a href="https://discord.gg/KZeXa26EPX" 
+   class="discord-link" 
+   target="_blank" 
+   rel="noopener noreferrer">
+  <button class="join-discord">Join Discord</button>
+</a>
+
         </div>
     </section>
 
